syntax = "proto3";

import "DTO/analysis_by_sprint.proto";
import "DTO/analysis_by_tag.proto";
import "DTO/analysis_by_ticket.proto";

option csharp_namespace = "Proto.Requests.AnalysisData";

message GetSprintAnalysisById {
  string sprint_id = 1;
}

message GetTagAnalysisById {
  string tag_id = 1;
}

message GetTicketAnalysisById {
  string ticket_id = 1;
}

service AnalysisRequestService {
  rpc GetSprintAnalysis(GetSprintAnalysisById) returns (AnalysisBySprintProto);
  rpc GetTagAnalysis(GetTagAnalysisById) returns (AnalysisByTagProto);
  rpc GetTicketAnalysis(GetTicketAnalysisById) returns (AnalysisByTicketProto);
}
